--- a/css/index.css
+++ b/css/index.css
@@ -48,7 +48,7 @@ body {
 }
 
 .body .logo-img {
-    top: 55%;
+    top: 60%;
     left: 50%;
     position: fixed;
     transform: translate(-50%, -50%);
@@ -67,13 +67,15 @@ body {
 
 .body .logo-img .btn-shop {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 100px;
 }
 .body .logo-img .btn-shop button{
     background: rgba(0,0,0,0.2);
     background-repeat:no-repeat;
-    border: 2px solid #fff;
+    border: 4px solid #fff;
     cursor:pointer;
     overflow: hidden; 
     color: #fff;
+    font-size: 12px;
+    padding: 10px 50px 10px 50px;
 }
